--- a/jobs-global-task/package.json
+++ b/jobs-global-task/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.1.0",
+    "@angular/animations": "^18.1.2",
     "@angular/common": "^18.1.0",
     "@angular/compiler": "^18.1.0",
     "@angular/core": "^18.1.0",
@@ -22,6 +22,7 @@
     "@ngrx/signals": "^17.2.0",
     "@ngrx/store": "^18.0.1",
     "@ngrx/store-devtools": "^18.0.1",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
